Add collection to arrange posts

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,4 +30,14 @@ layout: default
 
   {%- endif -%}
 
+  <br>
+  Example collection - MySQL:
+
+  {% for page in site.mysql %}
+    <h2>
+      <a href="{{ page.url }}">
+        {{ page.name }}
+      </a>
+    </h2>
+  {% endfor %}
 </div>
