--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,21 +1,100 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<html lang="{{ page.lang | default: site.lang | default: " en" }}">
 
-  {%- include head.html -%}
+{%- include head.html -%}
 
-  <body>
+<body>
 
     {%- include header.html -%}
 
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </main>
+    <div class="container">
+        <main class="d-flex flex-nowrap">
+            <div class="flex-shrink-0 pe-3" style="width: 280px;">
+                <ul class="list-unstyled ps-0">
+                    <li class="mb-1">
+                        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed ps-0 fw-medium"
+                            data-bs-toggle="collapse"
+                            data-bs-target="#laravel-collapse"
+                            aria-expanded="true">
+                            Laravel
+                        </button>
+                        <div class="collapse show" id="laravel-collapse">
+                            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
+                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">Overview</a>
+                                </li>
+                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">Updates</a>
+                                </li>
+                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">Reports</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="mb-1">
+                        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed ps-0 fw-medium"
+                            data-bs-toggle="collapse"
+                            data-bs-target="#symfony-collapse"
+                            aria-expanded="true">
+                            Symfony
+                        </button>
+                        <div class="collapse show" id="symfony-collapse">
+                            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
+                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">Overview</a>
+                                </li>
+                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">Updates</a>
+                                </li>
+                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">Reports</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="mb-1">
+                        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 ps-0 fw-medium"
+                                data-bs-toggle="collapse"
+                                data-bs-target="#webpack-collapse"
+                                aria-expanded="true">
+                            Webpack
+                        </button>
+                        <div class="collapse show" id="webpack-collapse" style="">
+                            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
+                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">Overview</a>
+                                </li>
+                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">Weekly</a>
+                                </li>
+                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">Monthly</a>
+                                </li>
+                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">Annually</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="mb-1">
+                        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 ps-0 fw-medium collapsed"
+                                data-bs-toggle="collapse"
+                                data-bs-target="#mysql-collapse"
+                                aria-expanded="false">
+                            MySQL
+                        </button>
+                        <div class="collapse" id="mysql-collapse" style="">
+                            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
+                                {% for page in site.mysql %}
+                                    <li><a href="{{ page.url }}" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">{{ page.name }}</a></li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="wrapper">
+                {{ content }}
+            </div>
+        </main>
+    </div>
 
     {%- include footer.html -%}
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
 
 </html>
