--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,8 @@
     <div class="container">
         <main class="d-flex flex-nowrap">
             <div class="flex-shrink-0 pe-3" style="width: 280px;">
+                <img src="{{ "/assets/images/avatar-170x170.png" | relative_url }}" class="rounded-circle img-thumbnail" alt="Gin">
+
                 <ul class="list-unstyled ps-0">
                     <li class="mb-1">
                         <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed ps-0 fw-medium"
