--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,6 +87,21 @@
                     <li class="mb-1">
                         <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 ps-0 fw-medium collapsed"
                                 data-bs-toggle="collapse"
+                                data-bs-target="#books-collapse"
+                                aria-expanded="true">
+                            Books
+                        </button>
+                        <div class="collapse show" id="books-collapse" style="">
+                            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
+                                {% for page in site.books %}
+                                    <li><a href="{{ page.url }}" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">{{ page.name }}</a></li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="mb-1">
+                        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 ps-0 fw-medium collapsed"
+                                data-bs-toggle="collapse"
                                 data-bs-target="#mysql-collapse"
                                 aria-expanded="false">
                             MySQL
