Automate collection showing

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,127 +13,26 @@
                 <img src="{{ "/assets/images/avatar-170x170.png" | relative_url }}" class="rounded-circle img-thumbnail" alt="Gin">
 
                 <ul class="list-unstyled ps-0">
-                    <li class="mb-1">
-                        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed ps-0 fw-medium"
-                            data-bs-toggle="collapse"
-                            data-bs-target="#laravel-collapse"
-                            aria-expanded="true">
-                            Laravel
-                        </button>
-                        <div class="collapse show" id="laravel-collapse">
-                            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
-                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">Overview</a>
-                                </li>
-                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">Updates</a>
-                                </li>
-                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">Reports</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="mb-1">
-                        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed ps-0 fw-medium"
-                            data-bs-toggle="collapse"
-                            data-bs-target="#symfony-collapse"
-                            aria-expanded="true">
-                            Symfony
-                        </button>
-                        <div class="collapse show" id="symfony-collapse">
-                            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
-                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">Overview</a>
-                                </li>
-                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">Updates</a>
-                                </li>
-                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">Reports</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="mb-1">
-                        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 ps-0 fw-medium"
-                                data-bs-toggle="collapse"
-                                data-bs-target="#webpack-collapse"
-                                aria-expanded="true">
-                            Webpack
-                        </button>
-                        <div class="collapse show" id="webpack-collapse" style="">
-                            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
-                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">Overview</a>
-                                </li>
-                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">Weekly</a>
-                                </li>
-                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">Monthly</a>
-                                </li>
-                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">Annually</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-
-                    {% for collection in site.collections %}
-                        <li class="mb-1">
-                            <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 ps-0 fw-medium collapsed"
-                                    data-bs-toggle="collapse"
-                                    data-bs-target="#{{ collection.label }}-collapse2"
-                                    aria-expanded="true">
-                                {{ collection.label }}
-                            </button>
-                            <div class="collapse show" id="{{ collection.label }}-collapse2" style="">
-                                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
-                                    {% for page in collection.docs %}
-                                        <li><a href="{{ page.url }}" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">{{ page.name }}</a></li>
-                                    {% endfor %}
-                                </ul>
-                            </div>
-                        </li>
+                    {% assign collections_by_position = site.collections | sort: "position" %}
+                    {% for collection in collections_by_position %}
+                        {% if collection.name %}
+                            <li class="mb-1">
+                                <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 ps-0 fw-medium collapsed"
+                                        data-bs-toggle="collapse"
+                                        data-bs-target="#{{ collection.label }}-collapse2"
+                                        aria-expanded="true">
+                                    {{ collection.name }}
+                                </button>
+                                <div class="collapse show" id="{{ collection.label }}-collapse2" style="">
+                                    <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
+                                        {% for page in collection.docs %}
+                                            <li><a href="{{ page.url }}" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">{{ page.name }}</a></li>
+                                        {% endfor %}
+                                    </ul>
+                                </div>
+                            </li>
+                        {% endif %}
                     {% endfor %}
-
-
-                    <li class="mb-1">
-                        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 ps-0 fw-medium collapsed"
-                                data-bs-toggle="collapse"
-                                data-bs-target="#principles-collapse"
-                                aria-expanded="true">
-                            Principles
-                        </button>
-                        <div class="collapse show" id="principles-collapse" style="">
-                            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
-                                {% for page in site.principles %}
-                                    <li><a href="{{ page.url }}" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">{{ page.name }}</a></li>
-                                {% endfor %}
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="mb-1">
-                        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 ps-0 fw-medium collapsed"
-                                data-bs-toggle="collapse"
-                                data-bs-target="#books-collapse"
-                                aria-expanded="true">
-                            Books
-                        </button>
-                        <div class="collapse show" id="books-collapse" style="">
-                            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
-                                {% for page in site.books %}
-                                    <li><a href="{{ page.url }}" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">{{ page.name }}</a></li>
-                                {% endfor %}
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="mb-1">
-                        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 ps-0 fw-medium collapsed"
-                                data-bs-toggle="collapse"
-                                data-bs-target="#mysql-collapse"
-                                aria-expanded="false">
-                            MySQL
-                        </button>
-                        <div class="collapse" id="mysql-collapse" style="">
-                            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
-                                {% for page in site.mysql %}
-                                    <li><a href="{{ page.url }}" class="link-body-emphasis d-inline-flex text-decoration-none rounded fw-light">{{ page.name }}</a></li>
-                                {% endfor %}
-                            </ul>
-                        </div>
-                    </li>
                 </ul>
             </div>
             <div class="wrapper">
