--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,28 +2,33 @@
 layout: default
 ---
 <div class="container">
-  <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
+    <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
+        <header class="post-header">
+            <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
+            <p class="post-meta">
+                <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
+                    {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+                    {{ page.date | date: date_format }}
+                </time>
+                {%- if page.author -%}
+                • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card"
+                        itemprop="name">{{ page.author }}</span></span>
+                {%- endif -%}
+            </p>
+        </header>
 
-    <header class="post-header">
-      <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
-      <p class="post-meta">
-        <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-          {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-          {{ page.date | date: date_format }}
-        </time>
-        {%- if page.author -%}
-          • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
-        {%- endif -%}</p>
-    </header>
+        <div class="post-content e-content" itemprop="articleBody">
+            <div style="padding: 1.25rem; margin-top: 1.25rem; margin-bottom: 1.25rem; color: #664d03; background-color: #fff3cd; border-left: 0.25rem solid #ffe69c;">
+                <strong>Notice:</strong> This information might be obsolete. As technology and trends evolve, some details may become outdated. Please refer to additional sources for the most current information.
+            </div>
 
-    <div class="post-content e-content" itemprop="articleBody">
-      {{ content }}
-    </div>
+            {{ content }}
+        </div>
 
-    {%- if site.disqus.shortname -%}
-      {%- include disqus_comments.html -%}
-    {%- endif -%}
+        {%- if site.disqus.shortname -%}
+        {%- include disqus_comments.html -%}
+        {%- endif -%}
 
-    <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
-  </article>
+        <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
+    </article>
 </div>
