--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,30 +3,41 @@ layout: default
 ---
 
 <div class="container">
-  {%- if page.title -%}
+    {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
-  {%- endif -%}
+    {%- endif -%}
 
-  {{ content }}
+    <h1 class="text-body-emphasis"></h1>
+    <div class="text-center">
 
-  {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
-    <ul class="post-list">
-      {%- for post in site.posts -%}
-      <li>
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-        <h3>
-          <a class="post-link" href="{{ post.url | relative_url }}">
-            {{ post.title | escape }}
-          </a>
-        </h3>
-        {%- if site.show_excerpts -%}
-          {{ post.excerpt }}
-        {%- endif -%}
-      </li>
-      {%- endfor -%}
-    </ul>
+    </div>
+    <div class="position-relative p-5 text-center text-muted bg-body border border-dashed rounded-2">
+        <h2 class="fw-normal text-dark">Gin Notes</h2>
+        <p class="col-lg-8 mx-auto mb-4">
+            "Studying, researching, and practicing demand considerable time, and time often works against memory.
+            <br>Why not spend a few minutes jotting down notes?"
+        </p>
+    </div>
 
-  {%- endif -%}
+    {{ content }}
+
+    {%- if site.posts.size > 0 -%}
+        <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
+        <ul class="post-list">
+            {%- for post in site.posts -%}
+            <li>
+                {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+                <span class="post-meta">{{ post.date | date: date_format }}</span>
+                <h3>
+                    <a class="post-link" href="{{ post.url | relative_url }}">
+                        {{ post.title | escape }}
+                    </a>
+                </h3>
+                {%- if site.show_excerpts -%}
+                {{ post.excerpt }}
+                {%- endif -%}
+            </li>
+            {%- endfor -%}
+        </ul>
+    {%- endif -%}
 </div>
