--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
                     {% endfor %}
                 </ul>
             </div>
-            <div class="wrapper">
+            <div class="wrapper" style="flex: 1;">
                 {{ content }}
             </div>
         </main>
