Update text layout

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,8 +12,8 @@ layout: default
 
     </div>
     <div class="position-relative p-5 text-center text-muted bg-body border border-dashed rounded-2">
-        <h2 class="fw-normal text-dark">Gin Notes</h2>
-        <p class="col-lg-8 mx-auto mb-4">
+        <h3 class="fw-normal text-dark">Gin Notes</h3>
+        <p class="mx-auto mb-4">
             "Studying, researching, and practicing demand considerable time, and time often works against memory.
             <br>Why not spend a few minutes jotting down notes?"
         </p>
